name:               hello-happstack
version:            1.0
build-type:         Simple
cabal-version:      >= 1.20

executable hello-happstack
  main-is:            Main.hs
  default-language:   Haskell2010
  ghc-options:        -O2 -Wall -threaded
  build-depends:      base,
                      happstack-lite
